--- a/Day 2-JS and CSS clock/styles.css
+++ b/Day 2-JS and CSS clock/styles.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     min-height: 100vh;
     font-family: 'Audiowide';
-    overflow: hidden
+    overflow: hidden;
 }
 
 .clock {
